// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> renders List Row with colored date correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c7 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: uppercase;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c15 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c4 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}

.c4:focus {
  outline: none;
}

.c4.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c4 > * {
  pointer-events: none;
}

.c3 {
  display: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c6 {
  width: 61.6%;
  max-width: 101px;
}

.c16 {
  display: none;
}

.c19 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c19:hover {
  background-color: #0150a7;
}

.c19:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c19:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c21 {
  max-height: 0;
  overflow: hidden;
}

.c18 {
  display: none;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  line-height: 1.2;
}

.c10 {
  width: 100%;
  position: relative;
}

.c0 {
  width: 100%;
}

@media screen and (min-width:768px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c13 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:480px) {
  .c6 {
    width: 31.1%;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: 26.8%;
    max-width: 116px;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    width: 32.7%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c16.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c16.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    border-top: 1px solid #E0E0E0;
  }

  .c21.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c21.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c18 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c20 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c14.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c14.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c14.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="list__container c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper c6"
        >
          <div
            className="text text--dark text--primary date--text c7"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text c8 c9"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content c10 c11"
        >
          <div
            className="column__mobile-only c12 c13"
          >
            <div
              className="text text--dark text--primary list-row--title c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle c8 c9"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c16 c17"
          >
            <div
              className="text text--dark text--primary c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content c16 c17"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c18"
        >
          <span
            aria-label="See Tickets"
            className="c19"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c20"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last c4"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c21 c13"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with link correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c20 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 0;
  cursor: pointer;
}

.c20:focus,
.c20:active,
.c20:visited,
.c20:hover {
  color: rgba(2,108,223,1);
}

.c20:hover {
  color: #0150a7;
}

.c22 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  cursor: pointer;
}

.c22:focus,
.c22:active,
.c22:visited,
.c22:hover {
  color: rgba(2,108,223,1);
}

.c22:hover {
  color: #0150a7;
}

.c7 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: uppercase;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c15 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c26 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c4 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}

.c4:focus {
  outline: none;
}

.c4.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c4 > * {
  pointer-events: none;
}

.c3 {
  display: none;
}

.c18 {
  width: 100%;
  position: absolute;
  left: 0;
  top: 100%;
}

.c19 {
  display: inline-block;
}

.c21 {
  display: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 1px;
  border-radius: 2px;
  margin: 12px 0 25px 0;
}

.c6 {
  width: 61.6%;
  max-width: 101px;
}

.c16 {
  display: none;
}

.c24 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0;
}

.c24:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c24:hover {
  background-color: #0150a7;
}

.c24:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c24:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c28 {
  max-height: 0;
  overflow: hidden;
}

.c23 {
  display: none;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  line-height: 1.2;
}

.c25 {
  width: 100%;
  position: absolute;
  left: 0;
  top: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  width: 100%;
  position: relative;
}

.c0 {
  width: 100%;
}

@media screen and (min-width:768px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c13 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c20 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c20 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c22 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c26 {
    font-size: 12px;
  }
}

@media screen and (min-width:1024px) {
  .c26 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    display: inline-block;
    opacity: 1;
    line-height: 1.5;
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
  }

  .c21.link--hidden {
    opacity: 0;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 25px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:480px) {
  .c6 {
    width: 31.1%;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: 26.8%;
    max-width: 116px;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    width: 32.7%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c16.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c16.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c28 {
    border-top: 1px solid #E0E0E0;
  }

  .c28.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c28.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c27 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c14.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c14.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c14.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="list__container c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper c6"
        >
          <div
            className="text text--dark text--primary date--text c7"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text c8 c9"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content c10 c11"
        >
          <div
            className="column__mobile-only c12 c13"
          >
            <div
              className="text text--dark text--primary list-row--title c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle c8 c9"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c16 c17"
          >
            <div
              className="text text--dark text--primary c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content c16 c17"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="c18 c13"
          >
            <button
              className="link--row-options c19 c20"
              data-index={0}
              href={null}
              onClick={[Function]}
              rel="_self"
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
              target=""
            >
              Ticket Options Available
            </button>
            <span
              className="link--row-options c21 c22"
              data-index={0}
              href=""
              onClick={null}
              rel="_self"
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
              target=""
            >
              Ticket Options Available
            </span>
          </div>
        </div>
        <div
          className="c23"
        >
          <span
            aria-label="See Tickets"
            className="c24"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="c25"
          >
            <div
              className="text text--dark text--secondary c8 c26"
              disabled={false}
              size={
                Object {
                  "large": "uno",
                  "medium": "uno",
                  "small": "uno",
                }
              }
            >
              on Partner Site
            </div>
          </div>
        </div>
      </a>
      <div
        className="c27"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last c4"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c28 c13"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders List Row with variant withLink correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c22 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c22:focus,
.c22:active,
.c22:visited,
.c22:hover {
  color: rgba(2,108,223,1);
}

.c22:hover {
  color: #0150a7;
}

.c20 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 0;
  cursor: pointer;
}

.c20:focus,
.c20:active,
.c20:visited,
.c20:hover {
  color: rgba(2,108,223,1);
}

.c20:hover {
  color: #0150a7;
}

.c7 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: uppercase;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c15 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c26 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c4 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}

.c4:focus {
  outline: none;
}

.c4.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c4 > * {
  pointer-events: none;
}

.c3 {
  display: none;
}

.c18 {
  width: 100%;
  position: absolute;
  left: 0;
  top: 100%;
}

.c19 {
  display: inline-block;
}

.c21 {
  display: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 1px;
  border-radius: 2px;
  margin: 12px 0 25px 0;
}

.c6 {
  width: 61.6%;
  max-width: 101px;
}

.c16 {
  display: none;
}

.c24 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0;
}

.c24:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c24:hover {
  background-color: #0150a7;
}

.c24:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c24:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c28 {
  max-height: 0;
  overflow: hidden;
}

.c23 {
  display: none;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  line-height: 1.2;
}

.c25 {
  width: 100%;
  position: absolute;
  left: 0;
  top: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  width: 100%;
  position: relative;
}

.c0 {
  width: 100%;
}

@media screen and (min-width:768px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c13 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c22 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c22 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c20 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c20 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c26 {
    font-size: 12px;
  }
}

@media screen and (min-width:1024px) {
  .c26 {
    font-size: 12px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c19 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    display: inline-block;
    opacity: 1;
    line-height: 1.5;
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
  }

  .c21.link--hidden {
    opacity: 0;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 25px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:480px) {
  .c6 {
    width: 31.1%;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: 26.8%;
    max-width: 116px;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    width: 32.7%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c16.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c16.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c28 {
    border-top: 1px solid #E0E0E0;
  }

  .c28.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c28.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c23 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c27 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c14.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c14.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c14.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="list__container c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper c6"
        >
          <div
            className="text text--dark text--primary date--text c7"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text c8 c9"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content c10 c11"
        >
          <div
            className="column__mobile-only c12 c13"
          >
            <div
              className="text text--dark text--primary list-row--title c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle c8 c9"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c16 c17"
          >
            <div
              className="text text--dark text--primary c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content c16 c17"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="c18 c13"
          >
            <button
              className="link--row-options c19 c20"
              data-index={0}
              href={null}
              onClick={[Function]}
              rel="_self"
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
              target=""
            >
              Ticket options available
            </button>
            <a
              className="c21 c22"
              data-index={0}
              href="/"
              onClick={null}
              rel="_self"
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
              target=""
            >
              Ticket options available
            </a>
          </div>
        </div>
        <div
          className="c23"
        >
          <span
            aria-label="See Tickets"
            className="c24"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
          <div
            className="c25"
          >
            <div
              className="text text--dark text--secondary c8 c26"
              disabled={false}
              size={
                Object {
                  "large": "uno",
                  "medium": "uno",
                  "small": "uno",
                }
              }
            >
              click here
            </div>
          </div>
        </div>
      </a>
      <div
        className="c27"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last c4"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c28 c13"
    />
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c11 .c11 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c7 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: uppercase;
  color: rgba(38,38,38,1);
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.6);
}

.c15 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c4 {
  border: 0;
  padding: 0 16px;
  outline: 0;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}

.c4:focus {
  outline: none;
}

.c4.icon-button--last {
  padding-left: 16px;
  padding-right: 0;
}

.c4 > * {
  pointer-events: none;
}

.c3 {
  display: none;
}

.c1 {
  background-color: rgba(255,255,255,1);
}

.c1:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c2 {
  background-color: rgba(255,255,255,1);
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: horizontal;
  -webkit-justify-content: horizontal;
  -ms-flex-pack: horizontal;
  justify-content: horizontal;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  border-radius: 2px;
  margin: 12px 0 12px 0;
}

.c6 {
  width: 61.6%;
  max-width: 101px;
}

.c16 {
  display: none;
}

.c19 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  min-width: 100px;
  max-width: 102px;
  height: 36px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.4;
  padding: 18px 0;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c19:hover {
  background-color: #0150a7;
}

.c19:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #013670;
}

.c19:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c21 {
  max-height: 0;
  overflow: hidden;
}

.c18 {
  display: none;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c8 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  line-height: 1.2;
}

.c10 {
  width: 100%;
  position: relative;
}

.c0 {
  width: 100%;
}

@media screen and (min-width:768px) {
  .c11 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:768px) {
  .c13 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c13 {
    max-width: 100%;
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:768px) {
  .c17 {
    padding-right: 12px;
    padding-left: 12px;
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1024px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:1440px) {
  .c17 {
    max-width: 50%;
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:1024px) {
  .c9 {
    font-size: 14px;
  }
}

@media screen and (min-width:768px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    display: block;
  }

  .c3.button--expanded,
  .c3.button--collapsed {
    -webkit-transition: all 0.1s linear;
    transition: all 0.1s linear;
  }

  .c3.button--expanded {
    -webkit-transform: rotate(-180deg);
    -ms-transform: rotate(-180deg);
    transform: rotate(-180deg);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    border-radius: 4px;
  }

  .c1.row__wrapper--expanded {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    transition: box-shadow 0.3s cubic-bezier(0.455,0.03,0.515,0.955),margin-bottom 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.01),0 4px 10px 0 rgba(0,0,0,0.19);
    margin-bottom: 12px;
  }

  .c1.row__wrapper--collapsed {
    -webkit-transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: box-shadow 0.3s cubic-bezier(0.55,0.085,0.68,0.53),margin-bottom 0.3s cubic-bezier(0.55,0.085,0.68,0.53);
    box-shadow: 0;
    margin-bottom: 0;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:480px) {
  .c6 {
    width: 31.1%;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: 26.8%;
    max-width: 116px;
  }
}

@media screen and (min-width:1024px) {
  .c6 {
    width: 32.7%;
  }
}

@media screen and (min-width:768px) {
  .c16 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c16.column__content--expanded {
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c16.column__content--collapsed {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }
}

@media screen and (min-width:768px) {
  .c12 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c21 {
    border-top: 1px solid #E0E0E0;
  }

  .c21.container__overflow--expanded {
    background-color: rgba(255,255,255,1);
    max-height: 600px;
    -webkit-transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: max-height 0.3s cubic-bezier(0.455,0.03,0.515,0.955),opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c21.container__overflow--collapsed {
    -webkit-transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: max-height 0.3s cubic-bezier(0.55,0.085,0.68,0.53),opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }
}

@media screen and (min-width:768px) {
  .c18 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:768px) {
  .c20 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c14.subtitle--hidden {
    position: absolute;
    -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
    opacity: 0;
  }

  .c14.subtitle--active {
    -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955) 0.2s;
    opacity: 1;
  }

  .c14.subtitle--expanded {
    -webkit-transform: translateX(-55%);
    -ms-transform: translateX(-55%);
    transform: translateX(-55%);
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="row__wrapper row__wrapper--collapsed c1"
  >
    <div
      className="list__container c2"
    >
      <button
        aria-expanded={false}
        aria-label="Expand Row"
        className="button--expand-or-collapse button--collapsed c3 c4"
        data-index={0}
        onClick={[Function]}
        role="button"
        size={45}
        type="button"
      >
        <svg
          fill="#1F262D"
          height={15}
          style={Object {}}
          viewBox="0 0 15 7"
          width={15}
        >
          <path
            d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
          />
        </svg>
      </button>
      <a
        aria-label="See Tickets"
        className="link__wrapper c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="date__wrapper c6"
        >
          <div
            className="text text--dark text--primary date--text c7"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "hecto",
              }
            }
          >
            apr 23
          </div>
          <div
            className="text text--dark text--secondary day-time--text c8 c9"
            disabled={false}
            size={
              Object {
                "large": "hecto",
                "medium": "hecto",
                "small": "hecto",
              }
            }
          >
            Thu, 8:00 PM
          </div>
        </div>
        <div
          className="row__content c10 c11"
        >
          <div
            className="column__mobile-only c12 c13"
          >
            <div
              className="text text--dark text--primary list-row--title c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
            <div
              className="text text--dark text--secondary list-row--subtitle c8 c9"
              disabled={false}
              size={
                Object {
                  "large": "hecto",
                  "medium": "hecto",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
          <div
            className="column__content list-row--title column__content--collapsed c16 c17"
          >
            <div
              className="text text--dark text--primary c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="column__content c16 c17"
          >
            <div
              className="text text--dark text--primary subtitle list-row--subtitle subtitle--active subtitle--collapsed c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
            <div
              className="text text--dark text--primary subtitle subtitle--expanded subtitle--hidden c14 c15"
              disabled={false}
              size={
                Object {
                  "large": "kilo",
                  "medium": "kilo",
                  "small": "hecto",
                }
              }
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
        <div
          className="c18"
        >
          <span
            aria-label="See Tickets"
            className="c19"
            role="button"
            size="regular"
            width="102px"
          >
            See Tickets
          </span>
        </div>
      </a>
      <div
        className="c20"
      >
        <button
          aria-label="More Info"
          className="button--more-info icon-button--last c4"
          data-index={0}
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            fill="rgba(38, 38, 38, 0.6)"
            height={22}
            viewBox="0 0 5 21"
            width={22}
          >
            <path
              d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="container__overflow container__overflow--collapsed c21 c13"
    />
  </div>
</div>
`;
